# Co-Pilot_Audit_Gym

./: .dockerignore  .gitignore  AWS_TRAINING_GUIDE.md  Dockerfile  README.md  app.py  config.yaml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  verify_policies.py
agents/: __init__.py  baseline.py  orchestrator.py  reviewer.py
app/: __init__.py  adversarial_maker.py  artifacts.py  elo.py  env.py  graders.py  judge.py  main.py  model_config.py  mutator.py  policies.py  problem_maker.py  red_team.py  tasks.py
demo/: app.py
hf_deploy/app/: main.py  models.py
hf_deploy/demo/: app.py
memory/: agent_memory.json  elo_state.json  knowledge_base.py  red_team_session.json  weakness_map.py
server/: app.py
tests/: test_env.py
training/: run_training.py
