[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilotaudit-gym"
version = "3.0.0"
description = "A multi-agent RL environment for enterprise AI governance review"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "gymnasium>=0.26.0",
    "requests>=2.28.0",
    "gradio>=3.50.0,<6.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
local-models = ["torch", "transformers>=4.40.0", "peft>=0.10.0"]

[tool.setuptools.packages.find]
include = ["app*"]
